--- a/app/views/static_pages/about1.html.erb
+++ b/app/views/static_pages/about1.html.erb
@@ -121,9 +121,9 @@
 			<!---- Kevin P. ---->
 			<div class="col-xs-4 col-sm-3">
 				<div class="group_item text-center" data-toggle="modal" data-target="#bio" 
-						data-name="Kevin P." data-text="..." 
-						data-img="<%=asset_path("avatar.png") %>">		
-					<div class="sq-about center-block" style="background-image: url(<%=asset_path("avatar.png") %>);"></div>
+						data-name="Kevin P." data-text="Writer of code and eater of baked goods. Now knows far too much about charting libraries." 
+						data-img="<%=asset_path("kevinp.jpg") %>">		
+					<div class="sq-about center-block" style="background-image: url(<%=asset_path("kevinp.jpg") %>);"></div>
 					<h5>Kevin P.</h5>
 				</div>
 			</div><!-- End Col-->
@@ -161,10 +161,10 @@
 			<!---- Nate V. ---->
 			<div class="col-xs-4 col-sm-3">
 				<div class="group_item text-center" data-toggle="modal" data-target="#bio" 
-						data-name="Nate V." data-text="Nate Vogel is a 4th year student that enjoys 
-						spending his time with computers, music, and traveling, and possesses a borderline 
-						unhealthy obsession with sneaker collecting. Nate worked on the report capability for the project, 
-						where he and his team provided the pdf and csv output functionality." 
+						data-name="Nate V." data-text="I am a 4th year student who enjoys 
+						spending my time with computers, music, and traveling, and possesses a borderline 
+						unhealthy obsession with sneaker collecting. I worked on the report capability for the project, 
+						where Taylor S. and I provided the pdf and csv output functionality." 
 						data-img="<%=asset_path("natev.jpg") %>">		
 					<div class="sq-about center-block" style="background-image: url(<%=asset_path("natev.jpg") %>);"></div>
 					<h5>Nate V.</h5>
