Some changes to analysis 2, 3, and 4

--- a/app/views/students/analysis2.html.erb
+++ b/app/views/students/analysis2.html.erb
@@ -7,12 +7,21 @@
                     <h2>Analysis <small> Reports for <%= @student.full_name %> </small></h2><!--Dynamically fills in with school id -->
                 </div>
                 <div class="col-xs-1 center-block">
-                    <div class="header-sq i-gray" title="Analysis">
-                        <span class="fa fa-line-chart fa-3x teacher-icon"></span>
+                    <div class="header-sq i-<%= @student.color %>" title="Analysis">
+                        <span class="fa fa-file-text-o fa-3x teacher-icon"></span>
                     </div>
                 </div>
             </div><!--End page header-->
-            Coming Soon! Reports Page!
+            <div class="row-xs-2 text-center">
+			    <div class="form-group">
+				    <h4>Session:</h4>Coming soon: A spinner to select a specific session.
+				    <br>
+				    <br>
+    				<%= button_tag(type: 'submit', class: "btn btn-lg btn-success", name: 'Report') do %>
+    				    Print Report
+    				<% end %>
+                </div>
+			</div><!--end form-->
         </div>
     </div>  
 </body>
