--- a/app/views/students/analysis.html.erb
+++ b/app/views/students/analysis.html.erb
@@ -7,7 +7,7 @@
                     <h2>Analysis <small> Reports for <%= @student.full_name %> </small></h2><!--Dynamically fills in with school id -->
                 </div>
                 <div class="col-xs-1 center-block">
-                    <div class="header-sq i-gray" title="Analysis">
+                    <div class="header-sq i-<%= @student.color %>" title="Analysis">
                         <span class="fa fa-line-chart fa-3x teacher-icon"></span>
                     </div>
                 </div>
@@ -18,7 +18,7 @@
                         <div class="row">
                             <div class = "col-xs-2">
                 				<a href="analysis2">
-        	                        <div class="col-xs-2 col-xs-offset-1 text-center" title="Analysis">
+        	                        <div class="col-xs-2 col-xs-offset-1 text-center" title="Reports">
         	                            <div class ="action-sq i-navy center-block" >
         		                            <span class="fa fa-file-text-o fa-4x action-icon" ></span>
         	                            </div>
@@ -35,7 +35,7 @@
                         <div class="row">
                             <div class = "col-xs-2">
                 				<a href="analysis3">
-        	                        <div class="col-xs-2 col-xs-offset-1 text-center" title="Analysis">
+        	                        <div class="col-xs-2 col-xs-offset-1 text-center" title="Charts">
         	                            <div class ="action-sq i-red center-block" >
         		                            <span class="fa fa-bar-chart fa-4x action-icon" ></span>
         	                            </div>
@@ -52,7 +52,7 @@
             			<div class="row">
                             <div class = "col-xs-2">
                 				<a href="analysis4">
-        	                        <div class="col-xs-2 col-xs-offset-1 text-center" title="Analysis">
+        	                        <div class="col-xs-2 col-xs-offset-1 text-center" title="Export">
         	                            <div class ="action-sq i-yellow center-block" >
         		                            <span class="fa fa-file-excel-o fa-4x action-icon" ></span>
         	                            </div>
