--- a/app/views/teachers/edit.html.erb
+++ b/app/views/teachers/edit.html.erb
@@ -7,6 +7,7 @@
 	</div>
 	<%= render 'layouts/current_teacher_icon' %>
 </div>
+<div class="col-xs-11"><h4><%= render 'layouts/flash' %></h4></div>
 
 <!-- Teacher profile area -->
 
