Added deploy helper to return version number and deploy date

--- a/app/views/static_pages/about1.html.erb
+++ b/app/views/static_pages/about1.html.erb
@@ -15,7 +15,7 @@
 	<div class="col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0 content-col">
 		<div class="page-header vertical-align">
 			<div class="col-xs-11">
-				<h2>About<small> - meet the GeoGem team</small></h2>
+				<h2>About<small> - GeoGem <%= DeployHelper.geogem_version_detailed =%>, deployed <%= DeployHelper.geogem_deploy_date =%></small></h2>
 			</div>
 			<div class="col-xs-1 center-block">
 				<div class="header-sq i-ltblue" title="All about GeoGem">
