--- a/app/views/roster_squares/edit.html.erb
+++ b/app/views/roster_squares/edit.html.erb
@@ -43,18 +43,19 @@
 			<!-- Calls the edit from which is the add squares select and the submit button-->
 			<%= render 'form', roster_square: @roster_square %>
 			
-						<!-- remove square row-->
-			<div class="row vertical-align add-rm-squares-row">
-				<div class="col-xs-1 col-xs-offset-1 text-right">
-					<span class="fa fa-minus" style="color: red;"></span>
-				</div>
-				<div class="col-xs-2 text-left">
-					<label for="removeSquare"><h4>Remove Square: </h4></label>
-				</div>
-				<div class="form-group col-xs-2">
-        			 <%= select_tag 'remove_square_id', options_for_select(@student_squares.map {|student_square| ["#{set_square_name(student_square)} - #{set_square_desc(student_square) }", student_square.id] }), class: "form-control", id: "removeStud", params: "remove_square_id"%>
-				</div>
-				<div class="col-xs-2 text-center">
-					<%= button_tag(type: 'submit', class: "btn btn-danger", id: "addStudBtn", name: "remove_square") do %> <i class="fa fa-minus icon-white"></i> <% end %>
-				</div>
-			</div><!--End row -->
+			<form>			<!-- remove square row-->
+				<div class="row vertical-align add-rm-squares-row">
+					<div class="col-xs-1 col-xs-offset-1 text-right">
+						<span class="fa fa-minus" style="color: red;"></span>
+					</div>
+					<div class="col-xs-2 text-left">
+						<label for="removeSquare"><h4>Remove Square: </h4></label>
+					</div>
+					<div class="form-group col-xs-2">
+						<%= select_tag 'remove_square_id', options_for_select(@student_squares.map {|student_square| ["#{set_square_name(student_square)} - #{set_square_desc(student_square) }", student_square.id] }), class: "form-control", id: "removeSquare"%>
+					</div>
+					<div class="col-xs-2 text-center">
+						<%= button_tag(type: 'submit', class: "btn btn-danger", id: "addStudBtn", name: "remove_square") do %> <i class="fa fa-minus icon-white"></i> <% end %>
+					</div>
+				</div><!--End row -->
+			</form>
