--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -45,19 +45,20 @@
 		<div class="col-xs-1 col-xs-offset-1">
 		  <h4>Color: </h4></div>
 		<div class="col-xs-4 col-xs-offset-1">
-      <%= f.select :color, ['navy','red','yellow',
-      ['light blue', 'ltblue'],'orange','green','lavender','plum','mint','pink']%>
+		  <% if @student.color == 'ltblue' %>
+        <%= f.select :color, colorNames.map {|color| [color.titleize, color]},  :selected => 'light blue', class: 'form-control' %>
+      <% else %>
+        <%= f.select :color, colorNames.map {|color| [color.titleize, color]}, class: 'form-control' %>
+      <% end %>
 		</div>
 	</div>
 
 <!-- Show Student Icon Field -->
   <div class="row form-row">
     <div class="col-xs-1 col-xs-offset-1"><h4>Icon: </h4></div>
-    <div class="col-xs-4 col-xs-offset-1">
-      <%= f.select :icon, ['bug', 'car','puzzle-piece','flash',
-     ['soccer ball','futbol-o'],'gamepad','heart','leaf','paper-plane','paw','star',
-      'graduation-cap'] %>
-  	</div>
+    	<div class="col-xs-4 col-xs-offset-1">
+			  <%= f.select :icon, studentIcons.map {|icon| [icon.titleize, icon]}, class: 'form-control' %>
+		  </div>
   </div>
 
 <!-- Show Student Contact Info -->  
