add suspend and restore teacher functionality

--- a/app/views/schools/_form.html.erb
+++ b/app/views/schools/_form.html.erb
@@ -74,7 +74,7 @@
 <div class="row action-buttons-row">
 	<div class="col-sm-1 col-sm-offset-1"> 
 	  <%= button_tag(type: 'submit', class: "btn btn-success") do %>  
-	  	Save Change
+	  	Save Changes
 	  <% end %>
 	</div>
 	<div class="col-sm-1 col-sm-offset-1"> 
