--- a/app/views/schools/restore.html.erb
+++ b/app/views/schools/restore.html.erb
@@ -20,7 +20,7 @@
 				Restore logins at Super User's focus school: <span style="color: blue; font-size: 1.4em; font-weight: bold;"><%= @school_name %></span>
 			</p>
 			<p>
-				This school has: <span style="color: blue; font-size: 1.4em; font-weight: bold;"><%= @teacher_count %> teachers</span>
+				This school has: <span style="color: blue; font-size: 1.4em; font-weight: bold;"><%= @teacher_count %> teachers</span> to be restored.
 			</p>
 
 			<form class="form-horizontal" action="super">
