--- a/app/views/schools/suspend.html.erb
+++ b/app/views/schools/suspend.html.erb
@@ -1,5 +1,5 @@
 <!-- UX Team. Edited by Robert Herrera and Dakota B -->
-<%= form_for :@activeTeachers do |t| %>
+
 <div class="container">
 	<div class="col-xs-10 col-xs-offset-1 col-sm-12 col-sm-offset-0 content-col">
 
@@ -21,22 +21,21 @@
 				Suspend logins at Super User's focus school: <span style="color: red; font-size: 1.4em; font-weight: bold;"><%= @school_name %></span>
 			</p>
 			<p>
-				This school has: <span style="color: red; font-size: 1.4em; font-weight: bold;"><%= @teacher_count %> teachers</span>
+				This school has: <span style="color: red; font-size: 1.4em; font-weight: bold;"><%= @teacher_count %> teachers</span> to be suspended.
 			</p>
 
 			<form class="form-horizontal" action="super">
 				<!-- Action buttons -->
 				<div class="row action-buttons-row">
 					<div class="col-xs-4 col-xs-offset-1 text-center"> 
-
+					<%= form_for :@activeTeachers do |t| %>
 
 								<%= t.hidden_field :suspended, :value=>true, class: 'form-control' %>
 								<%= button_tag(type: 'submit', class: "btn btn-success") do %>  
 		  						Suspend School
 		  					<% end %>
-
+					<% end %>
 						&nbsp; &nbsp; &nbsp;
 						<button type="submit" class="btn btn-danger">Cancel</button></div>
 				</div>
 			</form>
-<% end %>
