Smushin bugs all day

--- a/app/views/schools/super.html.erb
+++ b/app/views/schools/super.html.erb
@@ -5,7 +5,7 @@
 		<!-- page header -->
 		<div class="page-header vertical-align">
 			<div class="col-xs-11">
-				<h2>Super Dashboard<small> - create and manage schools using super powers</small></h2><!-- Dynamically fills in with school id -->
+				<h2>Super Dashboard<small> - create and manage  <%= @current_school.full_name %> using super powers</small></h2><!-- Dynamically fills in with school id -->
 			</div>
 			<div class="col-xs-1 center-block">
 				<div class="header-sq i-red" title="Prof Bill is Super User">
