--- a/app/views/teachers/admin_report.html.erb
+++ b/app/views/teachers/admin_report.html.erb
@@ -64,7 +64,7 @@
 								  <i class="fa fa-<%= teacher.icon %> fa-2x table-icon"></i>  <!--Generate Teacher Icon-->
 							  </div>
 							</td>	
-							<td><p class="listText"></p><span> <%= teacher.screen_name %></span> </p></td>
+							<td><p class="listText"><span> <%= teacher.screen_name %></span> </p></td>
 						    <td><p class="listText"><span> <%= teacher.full_name %></span> </p></td>
 						    <td><p class="listText"><span> <%= teacher.email %></span> </p></td>
 						    <td><p class="listText"><span> <%= teacher.last_login %></span> </p></td>
