--- a/app/views/teachers/admin.html.erb
+++ b/app/views/teachers/admin.html.erb
@@ -3,11 +3,11 @@
 <!-- page header -->
 	<div class="page-header vertical-align">
 			<div class="col-xs-11">
-				<h2>Admin Dashboard<small> -  manage school teachers, students, squares, etc</small></h2><!-- Dynamically fills in with school id -->
+				<h2>Admin Dashboard<small> -  manage <%= @current_school.full_name %> teachers, students, squares, etc</small></h2><!-- Dynamically fills in with school id -->
 			</div>
 			<div class="col-xs-1 pull-right">
-				<div class="header-sq i-<%= @teacher.color %>" title=<%= @teacher.screen_name %>>
-					<span class="fa fa-<%= @teacher.icon %> fa-3x teacher-icon"></span>
+				<div class="header-sq i-<%= @current_school.color %>" title=<%= @teacher.screen_name %>>
+					<span class="fa fa-home fa-3x school-icon"></span>
 				</div>
 			</div>
 		</div>
