Remove extraneous scrollbar on roster display page

--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -54,7 +54,7 @@
 	</div>
 </div>
 
-<div id="student-roster" class="pre-scrollable container-fluid"> <!--Student display area -->
+<div id="student-roster"> <!--Student display area -->
 	<% @students.each_with_index do |student, index| %>
 	<% if index % 6 == 0 %>
 		<div class="row students-row">
