Analysis Spinner for Reports from Carolyn C and Taylor S

--- a/app/views/students/analysis3.html.erb
+++ b/app/views/students/analysis3.html.erb
@@ -13,16 +13,8 @@
                 </div>
             </div><!--End page header-->
             <div class="row-xs-2 text-center">
-			    <div class="form-group">
-				    <h4>Session:</h4>Coming soon: A spinner to select a specific session.
-				    <br>
-				    <br>
-    				<%= button_tag(type: 'submit', class: "btn btn-lg btn-success", name: 'Charts') do %>
-    				    Print Charts
-    				<% end %>
-                </div>
-			</div><!--end form-->
-        <!--content-text -->
+    			<h4>Coming Soon! Charts!</h4>
+		    </div><!--end row-->
         </div>
     </div>  
 </body>
