--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -121,8 +121,8 @@
 				<span class="help-qa-letter">Q7.</span> Why does my Home page only show 8 student icons? I have more than 8 students.
 			</p>
 			<p class="help-answer-para">
-				<span class="help-qa-letter">A. The 8 student icons are the last 8 students you worked with. If you have more than 8
-				students in your roster, you can see all students in the “Student:” dropdown below the icons.
+				<span class="help-qa-letter">A. The student icons are the last 8 students you worked with.You can always see all your student in the
+				“Student:” dropdown below the icons.
 			</p>
 			
 			<hr class="help-line">
@@ -143,7 +143,7 @@
 			</p>
 			<p class="help-answer-para">
 				<span class="help-qa-letter">A:</span> Yes. Select the red Undo button in the lower right to undo. 
-				This undo button only works for the last behavior square you pressed. 
+				You can only undo the last square pressed, not more than that. 
 			</p>
 			<!-- end sessions questions -->
             <hr class="help-line">
@@ -154,15 +154,16 @@
 				<span class="help-qa-letter">Q10.</span> I’m overwhelmed. Where do I start?
 			</p>
 			<p class="help-answer-para">
-				<span class="help-qa-letter">A:</span> Select Admin at the top of the page.
-				This will take you to the Admin Dashboard. You can do most things from here.
+				<span class="help-qa-letter">A:</span> Select Admin at the top of the page. This will take you to the Admin Dashboard.
+				You’ll usually start from here. There are three “things” in GeoGem: Students, Teachers, and Squares.
+				From the Admin Dashboard, you’ll define your school by creating and editing your Students, Teachers, and Squares.
 			</p>
             <hr class="help-line">
             <p>
 				<span class="help-qa-letter">Q11.</span> How can I remove a remove a teacher or student from the system? 
 			</p>
 			<p class="help-answer-para">
-				<span class="help-qa-letter">A:</span> There’s no way to remove things from GeoGem. We’re not...
+				<span class="help-qa-letter">A:</span> There is no way to completely remove a Teacher (or Student or Square) from GeoGem.
 			</p>
 			<hr class="help-line">
 			<p>
@@ -172,20 +173,81 @@
 				<span class="help-qa-letter">A. Good point! While you can’t remove the teacher (and the session data associated with that teacher),
 				you CAN suspend the login for any teacher. Here are the steps: 
 									<ol type="1">
-  <li>Goto the Admin Dashboard,</li>
-  <li>Select All Teachers,</li>
-  <li>Select the teacher,</li>
-  <li>Select the Login Setting action icon at the bottom,</li>
-  <li>Set Login Status to “Suspended” and then “Change Settings”. </li>
-</ol> 
+			  <li>Goto the Admin Dashboard,</li>
+			  <li>Select All Teachers,</li>
+			  <li>Select the teacher,</li>
+			  <li>Select the Login Setting action icon at the bottom,</li>
+			  <li>Set Login Status to “Suspended” and then “Change Settings”. </li>
+			</ol> 
 			<span class="help-qa-letter">After this, your suspended teacher will not be able to login to GeoGem.
 			
 			</p>
-			<!--End Admin powers questions-->
             <hr class="help-line">
+             <p>
+				<span class="help-qa-letter">Q13.</span>I created a teacher and some students. But now, that teacher can’t
+				access any of the students. What can I do? 
+			</p>
+			<p class="help-answer-para">
+				<span class="help-qa-letter">A:</span> From the Admin Dashboard, select All Teachers. From there, select 
+				the teacher you want to change. At the bottom of that teacher’s profile page, select the Student Roster icon.
+				That page will allow you to add or remove students from a teacher’s roster.
+			</p>
+			<hr class="help-line">
+			 <p>
+				<span class="help-qa-letter">Q14.</span> So, teachers can only access students in their roster.
+				Ok. As an Admin, which students can I access?
+			</p>
+			<p class="help-answer-para">
+				<span class="help-qa-letter">A:</span>Correct. Teachers can only access students in their roster.
+				These students are assigned by you, the Admin. Second, an Admin can always access any student in the school.
+			</p>
+			<hr class="help-line">
+			 <p>
+				<span class="help-qa-letter">Q15.</span> One of my teachers forgot his GeoGem password. How can I fix this problem?
+			</p>
+			<p class="help-answer-para">
+				<span class="help-qa-letter">A:</span>Here’s the sequence: Goto the Admin Dashboard; Select All Teachers;
+				Select the teacher you want; Select the Login Settings action icon at the bottom of the page. From there,
+				you can reset a teacher’s password. Also in Login Settings, you can change a teacher’s powers
+				(Admin, Teacher, or SessionOnly), or even suspend a teacher’s login.
+			</p>
+			<hr class="help-line">
+			 <p>
+				<span class="help-qa-letter">Q16.</span> What are the differences between the three Teacher “powers” settings?
+			</p>
+			<p class="help-answer-para">
+				<span class="help-qa-letter">A:</span> There are three power levels for teachers (from strongest to weakest):
+				Admin, Teacher, and SessionOnly. An Admin can create and edit nearly everything for their school in GeoGem.
+				This is the person in charge. Teacher powers include running behavioral sessions and also analyzing the results.
+				SessionOnly users can only run behavioral sessions and not analysis reports. The intent is that aides or volunteers
+				would be candidates for SessionOnly status.
+			</p>
+			<hr class="help-line">
+			 <p>
+				<span class="help-qa-letter">Q17.</span> I see how I can change the password of other teachers, but as an Admin,
+				how do I change my own password? And my gosh… what if I forget MY password? What then?
+			</p>
+			<p class="help-answer-para">
+				<span class="help-qa-letter">A:</span> Select Profile in the navbar at the top of the page. That will take you to
+				your Profile Page. At the bottom, you’ll see the Change Password action icon. Go there to change your own password. 
+				If you forget your password and there isn’t another Admin in your school, then you need to contact GeoGem’s Super User for help.
+				The best course is to email Prof Bill at
+				<a href="mailto:wtkrieger@noctrl.edu">wtkrieger@noctrl.edu</a>.
+			<!--End Admin powers questions-->
+			</p>
+			<hr class="help-line">
 			
-            
             <!-- Ect questions-->
+            <a id="etc"></a>
+            	<h3 class="help-header">Etc &nbsp;  <span class="fa fa-shower fa-fw fa-1x i-ltblue help-small-sq" ></span></h1>
+            <p>
+				<span class="help-qa-letter">Q18.</span>  Are you planning improvements and new GeoGem features in the future?  
+			</p>
+			<p class="help-answer-para">
+				<span class="help-qa-letter">A:</span> Absolutely! We are working to 1) improve the current GeoGem experience, and
+				2) looking for new ideas to incorporate into GeoGem.
+			</p>
+			<hr class="help-line">
             <p>
 				<span class="help-qa-letter">Q19.</span> What does the name GeoGem mean? I don’t get it.
 			</p>
@@ -201,8 +263,8 @@
 			</p>
 		
 			<p class="help-answer-para">
-				<span class="help-qa-letter">A:</span> Sure. You can contact the GeoGem Help Staff (um, Prof Bill) at<br>
-				 <a href="wtkrieger@noctrl.edu">wtkrieger@noctrl.edu</a>.
+				<span class="help-qa-letter">A:</span> Sure. You can contact the GeoGem Help Staff (um, Prof Bill) at
+				 <a href="mailto:wtkrieger@noctrl.edu">wtkrieger@noctrl.edu</a>.
 			</p>
            
 			<!--End Ect questions-->
