Fixed link to bio page

--- a/app/views/static_pages/about1.html.erb
+++ b/app/views/static_pages/about1.html.erb
@@ -50,7 +50,8 @@
 				<h3>Meet the Team</h3>
 				<p>
 					<!--Part 3: Authors. GeoGem is the creation of... Capstone2017 student profiles. (smile)-->
-					GeoGem is the creation of the 2017 Computer Science Capstone class at <a href="northcentralcollege.edu">North Central College</a>. 
+					GeoGem is the creation of the 2017 Computer Science Capstone class at <a href="https://www.northcentralcollege.edu/" target="_blank">
+						North Central College</a>. 
 					The Capstone course was led by Professor Bill and was comprised of 17 students. 
 				</p>
 			</div>
@@ -60,7 +61,8 @@
 			<!---- Alex P. ---->
 			<div class="col-xs-4 col-sm-3">
 				<div class="group_item text-center" data-toggle="modal" data-target="#bio" 
-						data-name="Alex P." data-text="..." 
+						data-name="Alex P." data-text="I really enjoyed working on GeoGem. I was a part of the team that created the session pages.
+						This project allowed me to gain a unique set of skills that helped me further my skills as a programmer." 
 						data-img="<%=asset_path("alexp.jpg") %>">		
 					<div class="sq-about center-block" style="background-image: url(<%=asset_path("alexp.jpg") %>);"></div>
 					<h5>Alex P.</h5>
